--- a/src/app/home/contact/contact.component.html
+++ b/src/app/home/contact/contact.component.html
@@ -1,22 +1,33 @@
-<div class="container-fluid" data-aos="fade-up" data-aos-duration="1000">
-    <div class="row justify-content-center">
-        <div class="col-12 col-lg-4">
-            <app-heading></app-heading>
-        </div>
+<div class="container-fluid" data-aos="fade-up" data-aos-duration="2000">
+  <div class="row justify-content-center">
+    <div class="col-12 col-lg-4">
+      <app-heading></app-heading>
     </div>
-    <div class="row justify-content-center">
-        <div class="col-8 text-center">
-            <h2>
-                Get in touch!
-            </h2>
-            <p>
-                I will be happy to receive your contact if you want to talk about new opportunities. Write me, and I will reply as soon as I see your message.
-            </p>
-            <div class="container p-3">
-                <div class="row justify-content-center">
-                    <a (click)='googleAnalytics.sendAnalyticEvent("click_button", "contact", "contact-button")' href="mailto:gupabhi20@gmail.com" target='_blank' class="neon-button">Say Hello</a>
-                </div>
-            </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-8 text-center">
+      <h2>Get in touch!</h2>
+      <p>
+        I will be happy to receive your contact if you want to talk about new
+        opportunities. Write me, and I will reply as soon as I see your message.
+      </p>
+      <div class="container p-3">
+        <div class="row justify-content-center">
+          <a
+            (click)="
+              googleAnalytics.sendAnalyticEvent(
+                'click_button',
+                'contact',
+                'contact-button'
+              )
+            "
+            href="mailto:gupabhi20@gmail.com"
+            target="_blank"
+            class="neon-button"
+            >Say Hello</a
+          >
         </div>
+      </div>
     </div>
+  </div>
 </div>
