--- a/src/app/home/banner/banner.component.css
+++ b/src/app/home/banner/banner.component.css
@@ -65,7 +65,7 @@
   );
   transform: translateZ(-50px);
   border-radius: inherit;
-  animation: rotation 10s linear infinite;
+  animation: rotation 15s linear infinite;
   z-index: -1;
   filter: blur(1rem);
 }
@@ -86,7 +86,10 @@
 #role,
 #hobby {
   font-size: 1.25rem;
-  /* text-shadow: 2px 2px 10px var(--accent-color); */
+  text-shadow: 0px 0px 0px #000, 0px 0.75px 0.75px #6b6b6b,
+    0px 1.25px 0.75px #666666, 0px 1.75px 1.25px #616161,
+    0px 2.25px 1.25px #5b5b5b, 0px 2.75px 1.75px #555, 0px 3.25px 1.75px #505050,
+    0px 3.75px 2.25px #4a4a4a, 0px 4.25px 2.25px #444, 0px 4.75px 2.75px #3e3e3e;
 }
 
 .image-div {
@@ -111,8 +114,10 @@
 
 .txt {
   background-color: var(--bg-color);
-  font-weight: 500;
+  font-weight: bold;
   position: relative;
+  text-shadow: 1px 1px 1px var(--gradient-color-1),
+    2px 2px 2px var(--gradient-color-2), 3px 3px 3px var(--gradient-color-3);
 }
 
 .txt::before {
@@ -124,7 +129,7 @@
 
 .gradient {
   background: linear-gradient(
-    45deg,
+    60deg,
     var(--gradient-color-1),
     var(--gradient-color-2)
   );
@@ -136,7 +141,7 @@
   width: 100%;
   height: 100%;
   mix-blend-mode: multiply;
-  animation: text-gradient 15s alternate infinite;
+  animation: text-gradient 5s alternate infinite;
 }
 
 @keyframes text-gradient {
